# cs107-FinalProject

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  DoxygenFrontPage.md  LICENSE  Makefile  README.md  config.sh  get_code_cov.sh  hello_world.cpp  main.cpp  old.makefile
OffPiste/: CMakeLists.txt  config.sh  coverage.sh
OffPiste/core/src/: CMakeLists.txt  Function.cpp  Node.cpp  OffPiste.cpp
OffPiste/core/tests/: CMakeLists.txt  test_main.cpp
OffPiste/core/tests/src/: CMakeLists.txt  test_MAL.cpp  test_backward_functions.cpp  test_forward_functions.cpp  test_init.cpp  test_integration.cpp  test_operators.cpp  test_variables.cpp  test_vars.h
OffPiste/include/: BackwardFunctions.hpp  BinaryOperator.hpp  ForwardFunctions.hpp  Function.hpp  Node.hpp  OffPiste.hpp  UnaryOperator.hpp  Variable.hpp
docs/: BACKGROUND.md  EXAMPLE_USAGE.md  IMPLEMENTATION.md  Interface.md  README.md  SOFTWARE_ORGANIZATION.md  document.md  documentation.md  milestone1.md  milestone2.md  milestone2_progress.md  milestone3.md
docs/doxygen/html/: _backward_functions_8hpp.html  _backward_functions_8hpp_source.html  _binary_operator_8hpp_source.html  _forward_functions_8hpp.html  _forward_functions_8hpp_source.html  _function_8hpp_source.html  _node_8hpp_source.html  _off_piste_8hpp_source.html  _unary_operator_8hpp_source.html  _variable_8hpp_source.html  annotated.html  class_auto_diff-members.html  class_auto_diff.html  class_o_p_1_1_function-members.html  class_o_p_1_1_function.html  class_o_p_1_1_node-members.html  class_o_p_1_1_node.html  class_o_p_1_1_variable-members.html  class_o_p_1_1_variable.html  classes.html  dir_032fb1e3d60eda7e9d182b9c6ebfdf43.html  dir_06907c41beb59d5a6c6bfd540aaf1d8b.html  dir_2157a0199eb5def7218c98e2f90bff7b.html  dir_21bad037296a06840433100aee9d3270.html  dir_240a752aea2291760364c4fff43955c9.html  dir_30bb452825eb6643db44bf6702bb3210.html  dir_362890cda44d5a56998a5bcd16e94fb1.html  dir_3a48bab85a9115fc6757f24f7209e060.html  dir_48c7f59bf5dd289b386d7ac9f47b9035.html  dir_5d93d9c537489232cdaef6df8802ffb0.html  dir_5de6f4540ff1f866f4802c184fc08194.html  dir_61dc19cdd790d2a65988099c91330ea9.html  dir_63c11207f814c3359220afb3b389371e.html  dir_6481f79de91ec727563b6196229de921.html  dir_677b7e4f345a5280cb86f9571e70d9d6.html  dir_6946aef862c33b5c0c2db2fae8cdc28a.html  dir_75a8344aee6366d7be8f20d622fc8afe.html  dir_7b19ba5a99ff999adbad562336949b42.html  dir_7c4483b93be6237423fdd187bfba9cd1.html  dir_7cb07707a727e3890bc221b6d93ce6da.html  (+34 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+42 more)
example_usage/: .gitignore  Makefile  README.md  example  example.cpp  makefile  readme.md
example_usage/include/: OffPiste.cpp  OffPiste.hpp
src/: BackwardFunctions.hpp  BinaryOperator.hpp  ForwardFunctions.hpp  Function.cpp  Function.hpp  Graph.cpp  Graph.hpp  Node.hpp  UnaryOperator.hpp  Variable.hpp
